[gd_scene load_steps=2 format=2]

[ext_resource path="res://FollowCamera.gd" type="Script" id=1]

[node name="Camera" type="Position2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="ShakeTween" type="Tween" parent="."]

[node name="Frequency" type="Timer" parent="."]

[node name="Duration" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Frequency" to="." method="_on_Frequency_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
